appId: "com.recipedia"

---
- assertVisible:
    text: "Shopping"
    index: 0
    label: Shopping screen title is displayed
- assertVisible:
    text: "SHOPPING LIST"
    label: Shopping list title is displayed
- assertVisible:
    text: "Grain or Cereal"
    label: Category Grain or Cereal is displayed
- assertVisible:
    text: "󰄱, Flour, 1 recipe"
    label: Ingredient Flour is displayed unchecked
- assertVisible:
    text: "Plant Protein"
    label: Category Plant Protein is displayed
- assertVisible:
    text: "󰄱, Eggs, 1 recipe"
    label: Ingredient Eggs is displayed unchecked
- assertVisible:
    text: "Dairy"
    label: Category Dairy is displayed
- assertVisible:
    text: "Oil and Fat"
    label: Category Oil and Fat is displayed
- assertVisible:
    text: "󰄱, Milk, 1 recipe"
    label: Ingredient Milk is displayed unchecked
- assertVisible:
    text: "󰄱, Butter, 1 recipe"
    label: Ingredient Butter is displayed unchecked
- longPressOn:
    text: "󰄱, Flour, 1 recipe"
    label: Long Press on Flour
- runFlow: ../Alerts/longPressOnFlourPancakeOnly.yaml
- longPressOn:
    text: "󰄱, Eggs, 1 recipe"
    label: Long Press on Eggs
- runFlow: ../Alerts/longPressOnEggsPancakeOnly.yaml
- longPressOn:
    text: "󰄱, Milk, 1 recipe"
    label: Long Press on Milk
- runFlow: ../Alerts/longPressOnMilkPancakeOnly.yaml
- longPressOn:
    text: "󰄱, Butter, 1 recipe"
    label: Long Press on Butter
- runFlow: ../Alerts/longPressOnButterPancakeOnly.yaml
- tapOn:
    text: "󰄱, Flour, 1 recipe"
    label: Press Flour button
- assertVisible:
    text: "󰄲, Flour, 1 recipe"
    label: Ingredient Flour is displayed checked
- assertVisible:
    text: "󰄱, Eggs, 1 recipe"
    label: Ingredient Eggs is displayed unchecked
- assertVisible:
    text: "󰄱, Milk, 1 recipe"
    label: Ingredient Milk is displayed unchecked
- assertVisible:
    id: "CheckBoxButton - Butter::Pressable"
    text: "󰄱, Butter, 1 recipe"
    label: Ingredient Butter is displayed unchecked
- tapOn:
    text: "󰄱, Eggs, 1 recipe"
    label: Press Eggs button
- assertVisible:
    text: "󰄲, Flour, 1 recipe"
    label: Ingredient Flour is displayed checked
- assertVisible:
    text: "󰄲, Eggs, 1 recipe"
    label: Ingredient Eggs is displayed checked
- assertVisible:
    text: "󰄱, Milk, 1 recipe"
    label: Ingredient Milk is displayed unchecked
- assertVisible:
    id: "CheckBoxButton - Butter::Pressable"
    text: "󰄱, Butter, 1 recipe"
    label: Ingredient Butter is displayed unchecked
- tapOn:
    text: "󰄱, Milk, 1 recipe"
    label: Press Milk button
- assertVisible:
    id: "CheckBoxButton - Flour::Pressable"
    text: "󰄲, Flour, 1 recipe"
    label: Ingredient Flour is displayed checked
- assertVisible:
    id: "CheckBoxButton - Eggs::Pressable"
    text: "󰄲, Eggs, 1 recipe"
    label: Ingredient Eggs is displayed checked
- assertVisible:
    id: "CheckBoxButton - Milk::Pressable"
    text: "󰄲, Milk, 1 recipe"
    label: Ingredient Milk is displayed checked
- assertVisible:
    id: "CheckBoxButton - Butter::Pressable"
    text: "󰄱, Butter, 1 recipe"
    label: Ingredient Butter is displayed unchecked
- tapOn:
    text: "󰄱, Butter, 1 recipe"
    label: Press Butter button
- assertVisible:
    id: "CheckBoxButton - Flour::Pressable"
    text: "󰄲, Flour, 1 recipe"
    label: Ingredient Flour is displayed checked
- assertVisible:
    id: "CheckBoxButton - Eggs::Pressable"
    text: "󰄲, Eggs, 1 recipe"
    label: Ingredient Eggs is displayed checked
- assertVisible:
    id: "CheckBoxButton - Milk::Pressable"
    text: "󰄲, Milk, 1 recipe"
    label: Ingredient Milk is displayed checked
- assertVisible:
    id: "CheckBoxButton - Butter::Pressable"
    text: "󰄲, Butter, 1 recipe"
    label: Ingredient Butter is displayed checked
- tapOn:
    text: "󰄲, Flour, 1 recipe"
    label: Press Flour button
- tapOn:
    text: "󰄲, Eggs, 1 recipe"
    label: Press Eggs button
- tapOn:
    text: "󰄲, Milk, 1 recipe"
    label: Press Milk button
- tapOn:
    text: "󰄲, Butter, 1 recipe"
    label: Press Butter button
