appId: "com.recipedia"

---
# TODO bug parmesan isn't displayed
- assertVisible:
    text: "Shopping"
    index: 0
    label: Shopping screen title is displayed
- assertVisible:
    text: "SHOPPING LIST"
    label: Shopping list title is displayed
- assertVisible:
    text: "Grain or Cereal"
    label: Category Grain or Cereal is displayed
- assertVisible:
    text: "󰄱, Spaghetti, 1 recipe"
    label: Ingredient Spaghetti is displayed unchecked
- assertVisible:
    text: "Sauce"
    label: Category Sauce is displayed
- assertVisible:
    text: "󰄱, Tomato Sauce, 1 recipe"
    label: Ingredient Tomato Sauce is displayed unchecked
- assertVisible:
    text: "Meat"
    label: Category Meat is displayed
- assertVisible:
    text: "󰄱, Ground Beef, 1 recipe"
    label: Ingredient Ground Beef is displayed unchecked
- assertVisible:
    text: "Cheese"
    label: Category Cheese is displayed
- assertVisible:
    text: "󰄱, Parmesan, 1 recipe"
    label: Ingredient Parmesan is displayed unchecked
- longPressOn:
    text: "󰄱, Spaghetti, 1 recipe"
    label: Long Press on Spaghetti
- runFlow: ../Alerts/longPressOnSpaghettiBologneseOnly.yaml
- longPressOn:
    text: "󰄱, Tomato Sauce, 1 recipe"
    label: Long Press on Tomato Sauce
- runFlow: ../Alerts/longPressOnTomatoSauceSpaghettiOnly.yaml
- longPressOn:
    text: "󰄱, Ground Beef, 1 recipe"
    label: Long Press on Ground Beef
- runFlow: ../Alerts/longPressOnGroundBeefSpaghettiOnly.yaml
- longPressOn:
    text: "󰄱, Parmesan, 1 recipe"
    label: Long Press on Parmesan
- runFlow: ../Alerts/longPressOnParmesanSpaghettiOnly.yaml
- tapOn:
    text: "󰄱, Spaghetti, 1 recipe"
    label: Press Spaghetti button
- assertVisible:
    text: "󰄲, Spaghetti, 1 recipe"
    label: Ingredient Spaghetti is displayed checked
- assertVisible:
    text: "󰄱, Tomato Sauce, 1 recipe"
    label: Ingredient Tomato Sauce is displayed unchecked
- assertVisible:
    text: "󰄱, Ground Beef, 1 recipe"
    label: Ingredient Ground Beef is displayed unchecked
- assertVisible:
    text: "󰄱, Parmesan, 1 recipe"
    label: Ingredient Parmesan is displayed unchecked
- tapOn:
    text: "󰄱, Tomato Sauce, 1 recipe"
    label: Press Tomato Sauce button
- assertVisible:
    text: "󰄲, Spaghetti, 1 recipe"
    label: Ingredient Spaghetti is displayed checked
- assertVisible:
    text: "󰄲, Tomato Sauce, 1 recipe"
    label: Ingredient Tomato Sauce is displayed checked
- assertVisible:
    text: "󰄱, Ground Beef, 1 recipe"
    label: Ingredient Ground Beef is displayed unchecked
- assertVisible:
    text: "󰄱, Parmesan, 1 recipe"
    label: Ingredient Parmesan is displayed unchecked
- tapOn:
    text: "󰄱, Ground Beef, 1 recipe"
    label: Press Ground Beef button
- assertVisible:
    id: "CheckBoxButton - Spaghetti::Pressable"
    text: "󰄲, Spaghetti, 1 recipe"
    label: Ingredient Spaghetti is displayed checked
- assertVisible:
    id: "CheckBoxButton - Tomato Sauce::Pressable"
    text: "󰄲, Tomato Sauce, 1 recipe"
    label: Ingredient Tomato Sauce is displayed checked
- assertVisible:
    id: "CheckBoxButton - Ground Beef::Pressable"
    text: "󰄲, Ground Beef, 1 recipe"
    label: Ingredient Ground Beef is displayed checked
- assertVisible:
    text: "󰄱, Parmesan, 1 recipe"
    label: Ingredient Parmesan is displayed unchecked
- tapOn:
    text: "󰄱, Parmesan, 1 recipe"
    label: Press Parmesan button
- assertVisible:
    id: "CheckBoxButton - Spaghetti::Pressable"
    text: "󰄲, Spaghetti, 1 recipe"
    label: Ingredient Spaghetti is displayed checked
- assertVisible:
    id: "CheckBoxButton - Tomato Sauce::Pressable"
    text: "󰄲, Tomato Sauce, 1 recipe"
    label: Ingredient Tomato Sauce is displayed checked
- assertVisible:
    id: "CheckBoxButton - Ground Beef::Pressable"
    text: "󰄲, Ground Beef, 1 recipe"
    label: Ingredient Ground Beef is displayed checked
- assertVisible:
    text: "󰄲, Parmesan, 1 recipe"
    label: Ingredient Parmesan is displayed unchecked
- tapOn:
    text: "󰄲, Spaghetti, 1 recipe"
    label: Press Spaghetti button
- tapOn:
    text: "󰄲, Tomato Sauce, 1 recipe"
    label: Press Tomato Sauce button
- tapOn:
    text: "󰄲, Ground Beef, 1 recipe"
    label: Press Ground Beef button
- tapOn:
    text: "󰄲, Parmesan, 1 recipe"
    label: Press Parmesan button
