appId: "com.recipedia"

---

- assertVisible:
    id: "ShoppingScreen::ClearConfirmation::Dialog::Title"
    text: "Clear Shopping List"
    label: "Alert title is rendered"

- assertVisible:
    id: "ShoppingScreen::ClearConfirmation::Dialog::Content"
    text: "Are you sure you want to clear the entire shopping list?"
    label: "Alert message is rendered"

- assertVisible:
    id: "ShoppingScreen::ClearConfirmation::Dialog::Confirm-text"
    text: "Confirm"
    label: "Alert validation is rendered"

- assertVisible:
    id: "ShoppingScreen::ClearConfirmation::Dialog::Cancel-text"
    text: "Cancel"
    label: "Alert validation is rendered"

- tapOn:
    id: "ShoppingScreen::ClearConfirmation::Dialog::Confirm"
    label: "Confirm the deletion"
