appId: "com.recipedia"

---

- assertVisible:
    id: "ShoppingScreen::ClearConfirmation::Dialog::Title"
    text: "Vider la liste de courses"
    label: "Alert title is rendered"

- assertVisible:
    id: "ShoppingScreen::ClearConfirmation::Dialog::Content"
    text: "Êtes-vous sûr de vouloir vider entièrement la liste de courses ?"
    label: "Alert message is rendered"

- assertVisible:
    id: "ShoppingScreen::ClearConfirmation::Dialog::Confirm-text"
    text: "Confirmer"
    label: "Alert validation is rendered"

- assertVisible:
    id: "ShoppingScreen::ClearConfirmation::Dialog::Cancel-text"
    text: "Annuler"
    label: "Alert validation is rendered"

- tapOn:
    id: "ShoppingScreen::ClearConfirmation::Dialog::Confirm"
    label: "Confirm the deletion"
