appId: "com.recipedia"
---
- assertVisible:
    id: "RecipeTitle::Text"
    text: "Titre:"
    label: "Intro text for the recipe title is displayed in French"
- assertVisible:
    id: "RecipeDescription::Text"
    text: "Description:"
    label: "Intro text for the recipe description is displayed in French"

- scrollUntilVisible:
    element:
      id: "RecipeTags::ElementText"
    direction: DOWN
    speed: 60

- assertVisible:
    id: "RecipeTags::HeaderText"
    text: "Étiquettes:"
    label: "Intro text for the recipe tags is displayed in French"
- assertVisible:
    id: "RecipeTags::ElementText"
    text: "Les étiquettes représentent une façon d'identifier une recette afin d'en faciliter la recherche.\nVoici certains exemples d'étiquettes que vous pouvez utiliser : .*, .*, .*"
    label: "Explanation text for the recipe tags is displayed in French"

- scrollUntilVisible:
    element:
      id: "RecipePersons::NumericTextInput"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to persons part"

- assertVisible:
    id: "RecipePersons::PrefixText"
    text: "Cette recette est pour : "
    label: "Intro text for the recipe persons is displayed in French"
- assertVisible:
    id: "RecipePersons::SuffixText"
    text: " personnes"
    label: "Outro text for the recipe persons is displayed in French"

- scrollUntilVisible:
    element:
      id: "RecipeIngredients::PrefixText"
    direction: DOWN
    speed: 70

- assertVisible:
    id: "RecipeIngredients::PrefixText"
    text: "Ingrédients : "
    label: "Intro text for the recipe ingredients is displayed in French"

- scrollUntilVisible:
    element:
      id: "RecipeTime::PrefixText"
    direction: DOWN
    speed: 60

- assertVisible:
    id: "RecipeTime::PrefixText"
    text: "Temps de préparation :"
    label: "Intro text for the recipe time is displayed in French"
- assertVisible:
    id: "RecipeTime::SuffixText"
    text: "min"
    label: "Outro text for the recipe time is displayed in French"

- scrollUntilVisible:
    element:
      id: "RecipePreparation::EditableStep::0::Content"
    direction: DOWN
    speed: 60

- assertVisible:
    id: "RecipePreparation::PrefixText"
    text: "Préparation : "
    label: "Preparation prefix text is rendered"
- assertVisible:
    id: "RecipePreparation::EditableStep::0::Step"
    text: "Étape 1"
    label: "Recipe preparation section is displayed in French"
- assertVisible:
    id: "RecipePreparation::EditableStep::0::Title"
    text: "Titre de l'étape 1 : "
    label: "Intro text for the recipe title of the first step is displayed in French"
- assertVisible:
    id: "RecipePreparation::EditableStep::0::Content"
    text: "Contenu de l'étape 1 : "
    label: "Intro text for recipe content of the first step is displayed in French"

- tapOn:
    id: "Recipe::AppBar::Cancel"
    label: "Exit the edit mode"
- tapOn:
    id: "Recipe::AppBar::BackButton"
    label: "Quit the recipe screen"
